// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink should render external link 1`] = `
<a
  className="typography__Link-sc-1yq3b4j-5 cJIYQp"
  href="http://localhost"
>
  <test-file-stub
    className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
  />
  <b
    className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
  >
    Teksti
  </b>
</a>
`;

exports[`ExternalLink should render external link that targets new tab 1`] = `
<a
  className="typography__Link-sc-1yq3b4j-5 cJIYQp"
  href="http://localhost"
  target="_blank"
>
  <test-file-stub
    className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
  />
  <b
    className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
  >
    Teksti
  </b>
</a>
`;

exports[`ExternalLink should render link without explicit text 1`] = `
<a
  className="typography__Link-sc-1yq3b4j-5 cJIYQp"
  href="http://localhost"
>
  <test-file-stub
    className="ExternalLink__PositionedLinkIcon-sc-1in9m5g-0 dRZGgw"
  />
  <b
    className="typography__Bold-sc-1yq3b4j-6 hlMPgm"
  >
    http://localhost
  </b>
</a>
`;
